chore: configuring build

--- a/packages/asl-mock-example/package.json
+++ b/packages/asl-mock-example/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@packages/asl-mock-example",
-  "description": "",
+  "name": "@asl-tools/asl-mock-example",
+  "description": "Illustrates testing step functions with mock config",
   "version": "0.0.0",
   "license": "UNLICENSED",
   "private": true,
@@ -10,9 +10,10 @@
   },
   "scripts": {
     "build": "del dist && tsc",
+    "generate": "pnpm asl-mock -i src/crm-comment.mock.ts -a src/crm-comment.asl.json",
     "lint": "eslint .",
     "test": "vitest --run",
-    "clean": "del .turbo dist coverage"
+    "clean": "del .turbo dist coverage src/.asl-puml src/crm-comment.asl.test.ts src/__snapshots__"
   },
   "devDependencies": {
     "@toolchain/eslint-config": "workspace:*",
@@ -21,6 +22,6 @@
     "@types/node": "20.3.1"
   },
   "dependencies": {
-    "@packages/asl-mock": "workspace:*"
+    "@asl-tools/asl-mock": "workspace:*"
   }
 }
