--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "prettier-plugin-tailwindcss": "0.5.3",
     "turbo": "1.10.12",
     "typescript": "5.1.6"
+  },
+  "dependencies": {
+    "@changesets/cli": "2.26.2"
   }
 }
