--- a/packages/asl-puml/package.json
+++ b/packages/asl-puml/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@packages/asl-puml",
-  "version": "0.20.0",
+  "name": "@asl-tools/asl-puml",
+  "version": "0.0.0",
   "description": "Generates a plant uml file from a valid JSON ASL file",
   "type": "module",
   "exports": {
