--- a/toolchain/eslint-config/package.json
+++ b/toolchain/eslint-config/package.json
@@ -18,17 +18,15 @@
     "ts-deepmerge": "6.2.0"
   },
   "dependencies": {
-    "@eslint/js": "8.47.0",
-    "@typescript-eslint/eslint-plugin": "6.4.0",
-    "@typescript-eslint/parser": "6.4.0",
-    "eslint": "8.47.0",
+    "@eslint/js": "8.48.0",
+    "@typescript-eslint/eslint-plugin": "6.4.1",
+    "@typescript-eslint/parser": "6.4.1",
+    "eslint": "8.48.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "3.6.0",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-svelte": "2.32.4",
     "eslint-plugin-vitest": "0.2.8",
-    "globals": "13.21.0",
-    "svelte-eslint-parser": "0.32.2"
+    "globals": "13.21.0"
   }
 }
