--- a/packages/asl-mock-example/package.json
+++ b/packages/asl-mock-example/package.json
@@ -22,6 +22,7 @@
     "@types/node": "20.5.6"
   },
   "dependencies": {
-    "@asl-tools/asl-mock": "workspace:*"
+    "@asl-tools/asl-mock": "workspace:*",
+    "@asl-tools/asl-mock-types": "workspace:*"
   }
 }
