--- a/packages/asl-mock/package.json
+++ b/packages/asl-mock/package.json
@@ -34,6 +34,7 @@
     "@types/node": "20.5.6"
   },
   "dependencies": {
+    "@asl-tools/asl-mock-types": "workspace:*",
     "@asl-tools/asl-puml": "workspace:*",
     "@aws-sdk/client-sfn": "3.398.0",
     "asl-validator": "3.8.1",
