--- a/packages/asl-mock-example/package.json
+++ b/packages/asl-mock-example/package.json
@@ -9,7 +9,7 @@
     ".": "./dist/index.js"
   },
   "scripts": {
-    "build": "del dist && tsc",
+    "build": "del dist && pnpm generate && tsc",
     "generate": "pnpm asl-mock -i src/crm-comment.mock.ts -a src/crm-comment.asl.json",
     "lint": "eslint .",
     "test": "vitest --run",
