--- a/packages/asl-mock-example/package.json
+++ b/packages/asl-mock-example/package.json
@@ -13,7 +13,7 @@
     "generate": "pnpm asl-mock -i src/crm-comment.mock.ts -a src/crm-comment.asl.json",
     "lint": "eslint .",
     "test": "vitest --run",
-    "clean": "del .turbo dist coverage src/.asl-puml src/crm-comment.asl.test.ts src/__snapshots__"
+    "clean": "del .turbo dist coverage src/.asl-puml src/__snapshots__"
   },
   "devDependencies": {
     "@toolchain/eslint-config": "workspace:*",
