--- a/packages/asl-mock-example/package.json
+++ b/packages/asl-mock-example/package.json
@@ -9,6 +9,7 @@
     ".": "./dist/index.js"
   },
   "scripts": {
+    "asl-mock": "asl-mock",
     "build": "del dist && pnpm generate && tsc",
     "generate": "pnpm asl-mock -i src/crm-comment.mock.ts -a src/crm-comment.asl.json",
     "lint": "eslint .",
