chore: still working through build

--- a/packages/asl-mock/package.json
+++ b/packages/asl-mock/package.json
@@ -10,6 +10,7 @@
     "asl-mock": "./dist/asl-mock.js"
   },
   "scripts": {
+    "prepare": "touch dist/asl-mock.js",
     "build": "del dist && tsc",
     "lint": "eslint .",
     "test": "vitest --run",
