--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -24,7 +24,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --ignore-scripts
+        run: pnpm install
 
       - name: Build Monorepo
         run: pnpm build
