--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -24,7 +24,7 @@ jobs:
           cache: 'pnpm'
 
       - name: workaround bin issue
-        run: touch packages/asl-mock/dist/asl-mock.js
+        run: mkdir -P packages/asl-mock/dist && touch packages/asl-mock/dist/asl-mock.js
 
       - name: Install dependencies
         run: pnpm install --ignore-scripts
